rgbds-0.6.1/test/asm/purge.err
error: purge.asm(9):
    Symbol "Referenced" is referenced and thus cannot be purged
error: Assembly aborted (1 error)!
