rgbds-0.6.1/test/asm/purge.asm

SECTION "purging", ROM0

Label:
	PURGE Label
Label:

	db Referenced
	PURGE Referenced ; Should fail

Exported::
	PURGE Exported
Exported::
